JumpScript/tests/baselines/reference/bind1.errors.txt
tests/cases/compiler/bind1.jump(2,31): error TS2304: Cannot find name 'I'.


==== tests/cases/compiler/bind1.jump (1 errors) ====
    module M {
        export class C implements I {} // this should be an unresolved symbol I error
                                  ~
!!! error TS2304: Cannot find name 'I'.
    }
    
    